Closed Bug 1878503 Opened 2 years ago Closed 2 years ago

opus audio not playing on linux (if media.ffvpx.enabled has been manually disabled. There is no fallback to system ffmpeg although media.utility-ffmpeg.enabled exists and is true.)

Categories

(Core :: Audio/Video: Playback, defect, P3)

Firefox 124
x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox122 --- unaffected
firefox123 --- disabled
firefox124 --- disabled
firefox125 --- fixed

People

(Reporter: zlice555, Assigned: padenot)

References

(Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(2 files)

Attached file about-support.txt

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:124.0) Gecko/20100101 Firefox/124.0

Steps to reproduce:

https://upload.wikimedia.org/wikipedia/commons/3/37/Big_Buck_Bunny_with_VTT_acid_test.webm

Actual results:

no audio

Expected results:

audio

Trying to use mozregression doesn't find anything and audio plays fine, so I'm not sure if it is an issue in my config or nightly itself.

Rebuilt my profile and have the same issue.

about:support pulse-rust says multiple codecs are not supported

The Bugbug bot thinks this bug should belong to the 'Core::Audio/Video: Playback' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Audio/Video: Playback
Product: Firefox → Core

Thanks for the report!

HARDWARE_VIDEO_DECODING:
default: available,
user: force_enabled, Force enabled by pref,

media.ffmpeg.vaapi.enabled: true

is not needed anymore. It would force-enable hardware decoding, but it's aready enabled by default. You can set it back to false.

media.ffvpx.enabled: false
media.rdd-vpx.enabled: false

ffvpx (Firefox' internal minimal ffmpeg fork) decodes Opus.
Please [re]set them back to their default on about:config and restart Firefox. Then it should work again.

That did the trick! TYVM darkspirit

Status: UNCONFIRMED → RESOLVED
Closed: 2 years ago
Resolution: --- → WORKSFORME

~/.local/bin/mozregression --good 2024-01-04 --bad 2024-02-04 --pref media.ffvpx.enabled:false -a about:support -a https://upload.wikimedia.org/wikipedia/commons/3/37/Big_Buck_Bunny_with_VTT_acid_test.webm

8:10.40 INFO: Last good revision: 734e2e027196a9d64120ebf11a01a1b03e494d43
8:10.40 INFO: First bad revision: 172dfc1e0158e9efc502e6adc358a59b1369af27
8:10.40 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=734e2e027196a9d64120ebf11a01a1b03e494d43&tochange=172dfc1e0158e9efc502e6adc358a59b1369af27

172dfc1e0158e9efc502e6adc358a59b1369af27 Paul Adenot — Bug 1873663 - Remove legacy audio decoders (vorbis, opus, pcm). r=media-playback-reviewers,alwu

Status: RESOLVED → REOPENED
Has STR: --- → yes
Ever confirmed: true
OS: Unspecified → Linux
Regressed by: 1873663
Hardware: Unspecified → x86_64
Resolution: WORKSFORME → ---
See Also: → 1863873
Summary: opus audio not playing on linux → opus audio not playing on linux (if media.ffvpx.enabled has been manually disabled. There is no fallback to system ffmpeg although media.utility-ffmpeg.enabled exists and is true.)
Status: REOPENED → NEW

:padenot, since you are the author of the regressor, bug 1873663, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(padenot)

Thanks for the ping, I'll remove those prefs, they're not useful anymore and can be quite confusing. Thanks for finding the cause so quickly and NI me!

Flags: needinfo?(padenot)
Severity: -- → S3
Priority: -- → P3

Set release status flags based on info from the regressing bug 1873663

Duplicate of this bug: 1881298

ffvpx is now always compiled in, this is part a rationalization of the codec
libraries we're using.

Assignee: nobody → padenot
Status: NEW → ASSIGNED
Duplicate of this bug: 1883121
Pushed by padenot@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a9316d9d1626 Remove MOZ_FFVPX and the associated pref. r=glandium,media-playback-reviewers,geckoview-reviewers,alwu
Status: ASSIGNED → RESOLVED
Closed: 2 years ago2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: