Bug 1878503 - Remove MOZ_FFVPX and the associated pref. r=glandium,media-playback-reviewers,geckoview-reviewers,alwu

ffvpx is now always compiled in, this is part a rationalization of the codec
libraries we're using.

Differential Revision: https://phabricator.services.mozilla.com/D202813