dom/media/gtest/TestMediaDataDecoder.cpp
@@ -63,8 +63,7 @@ TEST(MediaDataDecoder, H264)
 }
 
 // Decoding AV1 via. ffvpx is supported on Linux only.
-#if defined(MOZ_AV1) && defined(MOZ_WIDGET_GTK) && defined(MOZ_FFVPX) && \
-    !defined(MOZ_FFVPX_AUDIOONLY)
+#if defined(MOZ_AV1) && defined(MOZ_WIDGET_GTK) && !defined(MOZ_FFVPX_AUDIOONLY)
 TEST(MediaDataDecoder, AV1)
 {
   if (!MP4Decoder::IsSupportedType(MediaContainerType(MEDIAMIMETYPE(VIDEO_MP4)),
