dom/media/gtest/TestMediaDataEncoder.cpp
@@ -382,8 +382,7 @@ TEST_F(MediaDataEncoderTest, AndroidNotSupportedSize) {
 }
 #endif
 
-#if defined(XP_LINUX) && !defined(ANDROID) && \
-    (defined(MOZ_FFMPEG) || defined(MOZ_FFVPX))
+#if defined(XP_LINUX) && !defined(ANDROID)
 TEST_F(MediaDataEncoderTest, H264AVCC) {
   RUN_IF_SUPPORTED(CodecType::H264, [this]() {
     // Encod frames in avcC format.
@@ -508,8 +507,7 @@ TEST_F(MediaDataEncoderTest, VP8Duration) {
   });
 }
 
-#if defined(XP_LINUX) && !defined(ANDROID) && \
-    (defined(MOZ_FFMPEG) || defined(MOZ_FFVPX))
+#if defined(XP_LINUX) && !defined(ANDROID)
 TEST_F(MediaDataEncoderTest, VP8EncodeAfterDrain) {
   RUN_IF_SUPPORTED(CodecType::VP8, [this]() {
     RefPtr<MediaDataEncoder> e = CreateVP8Encoder();
@@ -673,8 +671,7 @@ TEST_F(MediaDataEncoderTest, VP9Duration) {
   });
 }
 
-#if defined(XP_LINUX) && !defined(ANDROID) && \
-    (defined(MOZ_FFMPEG) || defined(MOZ_FFVPX))
+#if defined(XP_LINUX) && !defined(ANDROID)
 TEST_F(MediaDataEncoderTest, VP9EncodeAfterDrain) {
   RUN_IF_SUPPORTED(CodecType::VP9, [this]() {
     RefPtr<MediaDataEncoder> e = CreateVP9Encoder();
